--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/profile-image.jpg"  />
+  <link rel="icon" type="image/svg+xml" href="/Profile-pic.jpg"  />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raj Shekhar</title>
 
